--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     <!-- Chung chi - Giai thuong -->
     <section id="chungchi" class="certificate container p-4">
       <h2 class="section-title">Chứng chỉ - Giải thưởng</h2>
-      <div class="row">
+      <div class="row mobile">
         <div class="certificate-content d-flex col bd-gold-right">
           <img src="images/Cert_WEB.png" alt="cc" width="250" />
           <div class="cc-name">
