--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="css/laptop.css" />
     <link rel="stylesheet" href="css/mobile.css" />
     <link rel="stylesheet" href="css/font.css" />
     <link rel="stylesheet" href="css/tablet.css" />
@@ -21,7 +22,8 @@
     <title>asm3</title>
   </head>
   <body>
-    <div class="banner container container-sm">
+    <!-- banner -->
+    <div class="banner container">
       <div class="banner-logo d-flex align-items-center justify-content-center">
         <div class="banner-name">
           <h1>Nguyễn Kim Tùng</h1>
@@ -59,10 +61,11 @@
         </ul>
       </div>
     </div>
+
     <!-- thong tin ca nhan -->
     <section id="about" class="container">
       <div class="row about">
-        <div id="target" class="target col py-4 ps-5">
+        <div id="target" class="target col py-5 ps-5">
           <h2 class="section-title pb-4">Mục tiêu nghề nghiệp</h2>
           <p>
             Là một sinh viên đã hoàn thành chương trình chứng chỉ Doanh Nghiệp
@@ -72,7 +75,7 @@
             hoàn thành tốt nhất công việc được giao.
           </p>
         </div>
-        <div id="personal-info" class="personal-info col ps-5 py-4">
+        <div id="personal-info" class="personal-info col ps-5 py-5">
           <h2 class="section-title pb-4">Thông tin cá nhân</h2>
           <ul class="ps-0">
             <li>
@@ -111,7 +114,7 @@
     </section>
     <!-- nghe nghiep -->
 
-    <section id="nghenghiep" class="container job-info py-4">
+    <section id="nghenghiep" class="container job-info py-5">
       <div class="grid">
         <div class="col border p-5">
           <div class="job-info-kn d-flex justify-content-between">
@@ -268,7 +271,7 @@
     </section>
 
     <!-- Chung chi - Giai thuong -->
-    <section id="chungchi" class="certificate container p-4">
+    <section id="chungchi" class="certificate container py-5">
       <h2 class="section-title">Chứng chỉ - Giải thưởng</h2>
       <div class="row mobile">
         <div class="certificate-content d-flex col bd-gold-right">
@@ -406,7 +409,7 @@
       <div class="container bg-grey">
         <ul class="d-flex align-items-center justify-content-center p-5">
           <li class="px-3">
-            <a href="#">
+            <a href="https://www.facebook.com/tung.2607.89" target="_blank">
               <i
                 class="icon-facebook footer-icon text-white bg-primary rounded-circle p-2 m-1"
               ></i
@@ -422,7 +425,7 @@
             >
           </li>
           <li class="px-3">
-            <a href="#">
+            <a href="https://github.com/tung890412" target="_blank">
               <i
                 class="icon-github-circled footer-icon text-white bg-primary rounded-circle p-2 m-1"
               ></i
